[package]
name = "leopold"
version = "0.0.1"
authors = ["quicksilver.machine@gmail.com"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8.13"
chrono = { version = "0.4", features = ["serde"] }
bollard = "0.7.1"
futures = "0.3.5"
tokio = { version="0.2.21", features = ["full"] }
