[package]
name = "leopold"
version = "0.0.1"
authors = ["quicksilver.machine@gmail.com"]
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
bollard = "0.7.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8.13"
tokio = { version="0.2.21", features = ["full"] }
uuid = { version="0.8", features=["v4"] }
