[package]
name = "leopold"
version = "0.0.1"
authors = ["quicksilver.machine@gmail.com"]
edition = "2018"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
bollard = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
regex = "1.5.6"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.24"
tokio = { version="1.19.2", features = ["full"] }
uuid = { version="1.1.2", features=["v4"] }
